# examples

./: .gitmodules
bash/: cmdline_options.sh  comparison.sh  statement.sh  user_input.sh
cxx/gtest/: CMakeLists.txt  setup.sh
cxx/gtest/include/: foo.h
cxx/gtest/src/: foo.cpp
cxx/gtest/test/: CMakeLists.txt  test_foo.cpp
cxx/io/: Makefile  readline.cpp
cxx/objcopy/: Makefile  data.txt  hello_objcopy.cpp
